# Paint

./: .clang-format  .gitcore  .gitignore  .h  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  brokenlinetool.cpp  brokenlinetool.h  brushtool.cpp  brushtool.h  buckettool.cpp  buckettool.h  canvas.cpp  canvas.h  circletool.cpp  circletool.h  cmake_install.cmake  colorgradientwidget.cpp  colorgradientwidget.h  compile_commands.json  createfilewindow.cpp  createfilewindow.h  erasertool.cpp  erasertool.h  filesmodel.cpp  filesmodel.h  filesystem.cpp  filesystem.h  gradientpalette.cpp  gradientpalette.h  homepage.cpp  homepage.h  idrawingtool.h  index.html  infobar.cpp  infobar.h  linetool.cpp  linetool.h  (+22 more)
.cache/clangd/index/: canvas.h.B6EC0B01573D156C.idx  createfilewindow.h.833023A8F8C60091.idx  filesmodel.h.7057E2EF66D29ABD.idx  filesystem.h.4E0FBD554907CEEB.idx  homepage.cpp.380F0E01F96C48C3.idx  homepage.h.CF4A05642524D9FC.idx  paintwindow.h.C10A09292A75A8A9.idx  toolbar.cpp.677FEBF643EBA266.idx  toolbar.h.269086E0501CD442.idx
.github/workflows/: main.yml  make_coveragr_report.yml  testing.yml
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake  deploy_paint_eaa700d05a.cmake  paint-plugins.cmake
coverage/Users/runner/work/Paint/Paint/: canvas.cpp.html  createfilewindow.h.html  toolbar.h.html
tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test_canvas.cpp  test_createfilewindow.cpp  test_main.cpp
